# ffmpeg_player

./: 1.jks  README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/a6666/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image.h  liao.cpp  native-lib.cpp
app/src/main/java/Interface/: GetRequest_Interface.java
app/src/main/java/Traslation/: Translation.java
app/src/main/java/com/example/a6666/: AirHockKeyRender.java  AvatarImageView.java  CustomFileComparator.java  DZVideoView.java  DarrenPlayer.java  FileMgr.java  ListViewAdapter.java  LocalVideoListActivity.java  MainActivity.java  MediaErrorListener.java  MediaPreparedListener.java  MusicAdapter.java  MusicContent.java  autoView.java  listActivity.java  newActivity.java  openglesActivity.java  sActivity.java
app/src/main/java/request/: videoRequest.java
app/src/main/java/viewModel/: requestMdel.java
app/src/main/res/anim/: view_animation.xml
app/src/main/res/layout/: activity_main.xml  activity_opengles1.xml  activity_video_list.xml  alert_dialog_progress_view.xml  list.xml  local_video_list_item.xml  opengles.xml  play.xml  s.xml  tv.xml  v.xml  video_item.xml  view_list_item.xml
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/a6666/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
